# exengine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  data.sh  toolchain-mingw64.cmake
.github/workflows/: linux-build.yml  windaube-build.yml
include/exengine/: engine.h
include/exengine/input/: input.h  scancodes.h
include/exengine/math/: collision.h  mathlib.h  octree.h
include/exengine/render/: camera.h  model.h  msdf.h  pointlight.h  renderer.h  scene.h  shader.h  ssao.h  text.h  texture.h  vga.h  window.h
include/exengine/sound/: sound.h
include/exengine/util/: cache.h  cvar.h  entity.h  ini.h  io.h  iqm.h  vertices.h
include/game/: game.h  mainmenu_scene.h  world_scene.h
source/: Makefile  engine.c  game.c  main.c
source/data/: conf.ini
source/data/shaders/: fboshader.fs.glsl  fboshader.vs.glsl  forward.fs.glsl  gbuffer.vs.glsl  gmain.fs.glsl  imgui.vs.glsl  pointfbo.gs.glsl  primshader.fs.glsl  ssao.fs.glsl  text.vs.glsl  vga.vs.glsl
source/data/tiles/: farm.iqm  nothing_land.iqm
source/game/: game.c  mainmenu_scene.c  world_scene.c
source/input/: input.c
source/math/: collision.c  octree.c
source/render/: camera.c  mesh.c  model.c  msdf.c  pointlight.c  renderer.c  scene.c  shader.c  ssao.c  text.c  texture.c  vga.c  window.c
source/sound/: sound.c
source/util/: cache.c  cvar.c  entity.c  ini.c  io.c  iqm.c  list.c
src/: game.c  main.c
src/data/: conf.ini
src/exengine/: engine.c  engine.h
src/exengine/data/shaders/: fboshader.fs.glsl  fboshader.glsl  forward.glsl  forward.vs.glsl  gbuffer.fs.glsl  imgui.fs.glsl  pointfbo.fs.glsl  pointfbo.vs.glsl  primshader.vs.glsl  ssao.glsl  ssao.vs.glsl  text.fs.glsl  vga.fs.glsl
src/exengine/input/: input.c  input.h  scancodes.h
src/exengine/math/: collision.c  collision.h  math.h  mathlib.h  octree.c  octree.h
src/exengine/render/: camera.c  camera.h  glad.c  mesh.c  mesh.h  model.c  model.h  msdf.c  msdf.h  pointlight.c  pointlight.h  render.h  renderer.c  renderer.h  scene.c  scene.h  shader.c  shader.h  ssao.c  ssao.h  text.c  text.h  texture.c  texture.h  vga.c  vga.h  vga_font.h  window.c  window.h
src/exengine/sound/: sound.c  sound.h  stb_vorbis.c
src/exengine/util/: cache.c  cache.h  entity.c  entity.h  ini.c  ini.h  io.c  io.h  iqm.c  iqm.h  list.h  util.h
src/inc/glad/: glad.h
